--- a/app/index.html
+++ b/app/index.html
@@ -23,14 +23,22 @@
 
         <slyd>
           <div v-list>
-            <h1>slyd</h1>
-            <h2>a minimalist's slide deck</h2>
+            <h1>Too Fast</h1>
+            <h2>Reducing UX anxiety <br> by adding time to user interaction</h2>
           </div>
         </slyd>
 
         <slyd id="slyd-1b">
           <div v-list>
-            <h3>bi-directional CSS parallax</h3>
+            <h1>Pull Over</h1>
+            <h2>dat app's too fast</h2>
+          </div>
+        </slyd>
+
+        <slyd id="slyd-1c">
+          <div v-list>
+            <h2>Quantum's on the horizon</h2>
+            <h3>potentially 0 latency</h3>
           </div>
         </slyd>
 
