--- a/app/index.html
+++ b/app/index.html
@@ -176,6 +176,140 @@
           </div>
         </slyd>
 
+        <slyd id="addicted-to-speed">
+          <div v-list>
+            <h2>We Are</h2>
+            <h2>Addicted To</h2>
+            <h1>Speed</h1>
+          </div>
+        </slyd>
+
+        <slyd id="advocate-calm-apps">
+          <div v-list text-left>
+            <small>I'd like to advocate for</small>
+            <h1>Calm apps</h1>
+          </div>
+        </slyd>
+
+        <slyd id="fast-apps-gif">
+          <div v-list>
+            <picture cover>
+              <img loading="lazy" src="https://media2.giphy.com/media/l0HlQXlQ3nHyLMvte/giphy.gif?cid=790b76115d1ad277436851795945673b&rid=giphy.gif" alt="">
+            </picture>
+          </div>
+        </slyd>
+
+        <slyd id="calm-app-descriptors">
+          <div v-list>
+            <h2>Plush</h2>
+            <h2>Fluid</h2>
+            <h2>Soft</h2>
+          </div>
+        </slyd>
+
+        <slyd id="mobile-os-comparison">
+          <div v-list text-left>
+            <h2>iOS <b>vs</b> Android</h2>
+            <h3>calm <b>vs</b> fast</h3>
+          </div>
+        </slyd>
+
+        <slyd id="attribute-comparison">
+          <div h-list>
+            <div v-list>
+              <h2>Fast</h2>
+              <div v-list>
+                <h3>Snappy</h3>
+                <h3>Instant</h3>
+                <h3>Elastic</h3>
+              </div>
+              <div v-list>
+                <h3>Startling</h3>
+                <h3>Direct</h3>
+                <h3>Fast</h3>
+              </div>
+            </div>
+            <div v-list>
+              <h2>Calm</h2>
+              <div v-list>
+                <h3>Plush</h3>
+                <h3>Fluid</h3>
+                <h3>Soft</h3>
+              </div>
+              <div v-list>
+                <h3>Gentle</h3>
+                <h3>Orchestrated</h3>
+                <h3>Optional</h3>
+              </div>
+            </div>
+          </div>
+        </slyd>
+
+        <slyd id="app-ethos-recap">
+          <div v-list>
+            <h1>Now what?</h1>
+          </div>
+        </slyd>
+
+        <slyd id="project-physical-to-digital">
+          <div v-list style="padding-left:20vw;padding-right:20vw;">
+            <h2>We <b>project</b> our physical world <b>into our digital world</b></h2>
+            <br>
+            <h2>Lower anxiety with <b>softness</b>, <b>lightness</b> & <b>orchestration</b></h2>
+          </div>
+        </slyd>
+
+        <slyd id="with-css">
+          <div v-list>
+            <h1>CSS!</h1>
+          </div>
+        </slyd>
+
+      </slyds>
+
+      <slyds>
+        
+        <slyd id="current-state">
+          <div v-list text-left>
+            <small>Current State</small>
+            <h1>Snappy CSS</h1>
+          </div>
+        </slyd>
+
+        <slyd id="snappy-code-recipe">
+          <div v-list>
+            <pre class="language-css line-numbers show-language"><code>
+              .card {
+                transition: transform 250ms ease-out;
+              }
+            </code></pre>
+            <ul>
+              <li>Animate between 200-300ms</li>
+              <li>Elasticy easing</li>
+              <li>Animate transforms</li>
+            </ul>
+          </div>
+        </slyd>
+
+        <slyd id="snappy-code-recipe-gif">
+          <div v-list>
+            <picture cover>
+              <img loading="lazy" src="https://media2.giphy.com/media/l0HlQXlQ3nHyLMvte/giphy.gif?cid=790b76115d1ad277436851795945673b&rid=giphy.gif" alt="">
+            </picture>
+          </div>
+        </slyd>
+
+      </slyds>
+
+      <slyds>
+        
+        <slyd id="calming-ui-strategies">
+          <div v-list text-left>
+            <small>Strategies for a</small>
+            <h1>Calming UI</h1>
+          </div>
+        </slyd>
+
       </slyds>
 
     </main>
