new slide content

--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,7 @@
           <div v-list>
             <h1>Too Fast</h1>
             <h2>Reducing UX anxiety <br> by adding time to user interaction</h2>
+            <h3>Add time to gain trust</h3>
           </div>
         </slyd>
 
@@ -189,7 +190,7 @@
           </div>
         </slyd>
 
-        <slyd id="fast-apps-gif">
+        <slyd id="calm-apps-gif">
           <div v-list>
             <picture cover>
               <img loading="lazy" src="https://media2.giphy.com/media/l0HlQXlQ3nHyLMvte/giphy.gif?cid=790b76115d1ad277436851795945673b&rid=giphy.gif" alt="">
@@ -276,15 +277,17 @@
 
         <slyd id="snappy-code-recipe">
           <div v-list>
-            <pre class="language-css line-numbers show-language"><code>
-              .card {
-                transition: transform 250ms ease-out;
-              }
-            </code></pre>
+            <div>
+              <pre class="language-css line-numbers show-language"><code>
+                .card {
+                  transition: transform 250ms ease-out;
+                }
+              </code></pre>
+            </div>
             <ul>
               <li>Animate between 200-300ms</li>
               <li>Elasticy easing</li>
-              <li>Animate transforms</li>
+              <li>Adjust time based on distance</li>
             </ul>
           </div>
         </slyd>
@@ -296,6 +299,12 @@
             </picture>
           </div>
         </slyd>
+        
+        <slyd id="snappy-not-surprising">
+          <div v-list text-left>
+            <h3>Nothing surprising here</h3>
+          </div>
+        </slyd>
 
       </slyds>
 
@@ -305,6 +314,57 @@
           <div v-list text-left>
             <small>Strategies for a</small>
             <h1>Calming UI</h1>
+          </div>
+        </slyd>
+
+        <slyd id="white-space-and-time">
+          <span class="slide-no">1</span>
+          <div v-list>
+            <h3>As designs need <b>white space</b></h3>
+            <h1>Apps need <b>time</b></h1>
+          </div>
+        </slyd>
+
+        <slyd id="airport-luggage-story">
+          <div v-list text-left>
+            <small>story time...</small>
+            <h2>Baggage Claim</h2>
+          </div>
+        </slyd>
+
+        <slyd id="add-time-gist">
+          <div v-list>
+            <pre class="language-js line-numbers show-language"><code>
+              // base animation length
+              // if completed faster than 1s
+              // ensure animation goes at least 5s
+              // finish animation
+            </code></pre>
+          </div>
+        </slyd>
+
+        <slyd id="time-is-money">
+          <div v-list>
+            <h2>Time <b>is</b> Money</h2>
+          </div>
+        </slyd>
+
+        <slyd id="time-is-money-gist">
+          <div v-list>
+            <pre class="language-js line-numbers show-language"><code>
+              // fixed animation length
+              // ensure animation goes at least 5s
+              // indeterminate if needed
+              // finish animation
+            </code></pre>
+          </div>
+        </slyd>
+
+        <slyd id="white-space-and-time">
+          <span class="slide-no">2</span>
+          <div v-list>
+            <h3>As designs need to <b>guide</b></h3>
+            <h1>Apps need to <b>follow</b></h1>
           </div>
         </slyd>
 
