--- a/app/index.html
+++ b/app/index.html
@@ -317,11 +317,21 @@
           </div>
         </slyd>
 
-        <slyd id="white-space-and-time">
+        <slyd id="white-space-&-time">
           <span class="slide-no">1</span>
           <div v-list>
-            <h3>As designs need <b>white space</b></h3>
-            <h1>Apps need <b>time</b></h1>
+            <h3>designs need <b>white space</b></h3>
+            <hr>
+            <h1>UX needs <b>time</b></h1>
+          </div>
+        </slyd>
+
+        <slyd id="how-to-white-space-&-time">
+          <div v-list>
+            <ol>
+              <li>Waiting vs Active</li>
+              <li>Time is Value</li>
+            </ol>
           </div>
         </slyd>
 
@@ -349,6 +359,33 @@
           </div>
         </slyd>
 
+        <slyd id="money-can-be-wasted">
+          <div v-list>
+            <h2>Money can be wasted...</h2>
+            <progress indeterminate></progress>
+          </div>
+        </slyd>
+
+        <slyd id="time-is-money-because">
+          <div v-list>
+            <ul>
+              <li>Too fast can mean wrong</li>
+              <li>Too fast can mean cheap</li>
+              <li>Too fast can mean <b>unreal</b></li>
+            </ul>
+          </div>
+        </slyd>
+
+        <slyd id="time-is-money-story">
+          <div v-list>
+            <small>Story time...</small>
+            <ul>
+              <li>Intel Comic Director</li>
+              <li>Conde Naste</li>
+            </ul>
+          </div>
+        </slyd>
+
         <slyd id="time-is-money-gist">
           <div v-list>
             <pre class="language-js line-numbers show-language"><code>
@@ -360,11 +397,72 @@
           </div>
         </slyd>
 
-        <slyd id="white-space-and-time">
+        <slyd id="guide-&-follow">
           <span class="slide-no">2</span>
           <div v-list>
-            <h3>As designs need to <b>guide</b></h3>
-            <h1>Apps need to <b>follow</b></h1>
+            <h3>designs need to <b>guide</b></h3>
+            <hr>
+            <h1>UX needs <br>to <b>follow</b></h1>
+          </div>
+        </slyd>
+
+        <slyd id="how-to-guide-&-follow">
+          <div v-list>
+            <ol>
+              <li>Time Based Feedback</li>
+              <li>Interruptible Interactions</li>
+            </ol>
+          </div>
+        </slyd>
+
+        <slyd id="gaming-buttons">
+          <div v-list>
+            <h2>Time Based Feedback</h2>
+            <h3>Tap & Hold UX</h3>
+          </div>
+        </slyd>
+
+        <slyd id="gaming-buttons-snippet">
+          <div v-list>
+            <pre class="language-js line-numbers show-language"><code>
+              // user controlled
+              // ux verifies command with time
+              // ux feedback of time
+            </code></pre>
+          </div>
+        </slyd>
+
+        <slyd id="interruptible">
+          <div v-list>
+            <h2>Interruptible Interactions</h2>
+            <h3>Enhance without degradation</h3>
+          </div>
+        </slyd>
+
+        <slyd id="interruptible-snippet">
+          <div v-list>
+            <pre class="language-js line-numbers show-language"><code>
+              // user can butt in and steal control anytime
+            </code></pre>
+          </div>
+        </slyd>
+
+        <slyd id="speak-&-report">
+          <span class="slide-no">3</span>
+          <div v-list>
+            <h3>designs need to <b>speak</b></h3>
+            <hr>
+            <h1>UX needs <br>to <b>report</b></h1>
+          </div>
+        </slyd>
+
+        <slyd id="how-to-speak-&-report">
+          <div v-list>
+            <ol>
+              <li>Audibally</li>
+              <li>Feedback</li>
+              <li>Autofill</li>
+            </ol>
           </div>
         </slyd>
 
