movin through the slides

--- a/app/index.html
+++ b/app/index.html
@@ -23,12 +23,18 @@
         <slyd id="beginning">
           <div v-list>
             <h1>It's Too Fast</h1>
-            <!-- <h3>Increase UX & <span highlight>reduce user anxiety</span> by<br>
-              <span highlight>adding time</span> to user interaction
-            </h3> -->
-            <h3>Increase UX <span highlight>adding time</span></h3>
-            <!-- <h3 class="brand_color-1">Add time to gain trust</h3> -->
+            <h3>Boost UX by <span highlight>adding time</span></h3>
           </div>
+        </slyd>
+
+        <slyd id="problem-statement" two-up-video-right>
+          <div v-list>
+            <h2 class="brand_color-1">The Problem</h2>
+            <p lead text-left>
+              <span bold>instant evolution</span>
+              <br>nothing in our world behaves like this</p>
+          </div>
+          <video fit-height src="./videos/dont-instant_jank.mp4" loading="lazy" autoplay muted loop controls></video>
         </slyd>
 
         <slyd id="goal">
@@ -36,32 +42,24 @@
             <h2 uppercase serif class="brand_color-1">Quest</h2>
             <p lead text-left>Compel a speed addicted community to replace techniques that create anxiety with techniques that relieve anxiety.</p>
             <p>
-              <small>AKA</small>
+              <small>in other words..</small>
               <br>
-              (advocate pace over speed)
+              (pace over speed)
             </p>
           </div>
         </slyd>
 
-        <slyd id="problem-statement" two-up-video-right>
-          <div v-list>
-            <h2>Pull Over</h2>
-            <h3>dat app's too fast</h3>
-          </div>
-          <video fit-height src="./videos/dont-instant_jank.mp4" loading="lazy" autoplay muted loop controls></video>
-        </slyd>
-
         <slyd id="quantum-speed">
           <div v-list>
-            <h2>Quantum's on the horizon</h2>
-            <h3>potentially 0 latency</h3>
+            <h2 class="brand_color-3">Quantum's on the horizon</h2>
+            <h3 class="text_color-1">potentially 0 latency</h3>
           </div>
         </slyd>
 
         <slyd id="slow-for-now">
           <div v-list text-left>
-            <h1>Slow still</h1>
-            <h3>for now...</h3>
+            <small>for now...</small>
+            <h1>still slow(ish)</h1>
           </div>
         </slyd>
 
@@ -75,6 +73,13 @@
           <div v-list>
             <h1>Earth Life UX</h1>
             <h3>Where you spend most your day</h3>
+          </div>
+        </slyd>
+
+        <slyd id="earth-evaluation">
+          <div v-list>
+            <h2>Earth Anxiety</h2>
+            <p lead>Inducers vs Relievers</p>
           </div>
         </slyd>
 
@@ -134,19 +139,19 @@
 
         <slyd id="dichotomies">
           <div v-list>
-            <h2>Tangibally & Audibally</h2>
+            <h2 bold class="brand_color-1">Tangibally & Audibally</h2>
             <br>
-            <h3>Sharp <b>vs</b> Soft</h3>
-            <h3>Heavy <b>vs</b> Light</h3>
+            <h3 class="text_color-1">Sharp <b class="brand_color-2">vs</b> Soft</h3>
+            <h3 class="text_color-1">Heavy <b class="brand_color-2">vs</b> Light</h3>
           </div>
         </slyd>
 
         <slyd id="connected-worlds">
           <div v-list>
-            <h3>Physical <b>&</b> Digital</h3>
-            <h3>Body <b>&</b> Mind</h3>
+            <h3 class="text_color-1">Physical <b class="brand_color-2">&</b> Digital</h3>
+            <h3 class="text_color-1">Body <b class="brand_color-2">&</b> Mind</h3>
             <br>
-            <h2>Connected</h2>
+            <h1 uppercase class="brand_color-1">Connected</h1>
           </div>
         </slyd>
 
@@ -180,102 +185,115 @@
           </div>
         </slyd>
 
-        <slyd id="fast-apps-gif">
+        <slyd id="fast-apps-gif" two-up-video-right>
           <div v-list>
-            <picture cover>
-              <img loading="lazy" src="https://media2.giphy.com/media/l0HlQXlQ3nHyLMvte/giphy.gif?cid=790b76115d1ad277436851795945673b&rid=giphy.gif" alt="">
-            </picture>
+            <h2>Speed standard</h2>
+            <p lead>Creating or relieving anxiety?</p>
           </div>
+          <video fit-height src="./videos/dont-lightning.mp4" loading="lazy" autoplay muted loop controls></video>
         </slyd>
 
         <slyd id="fast-app-descriptors">
           <div v-list>
-            <h2>Snappy</h2>
-            <h2>Instant</h2>
-            <h2>Elastic</h2>
+            <h2 class="brand_color-1">Snappy</h2>
+            <h2 class="brand_color-2">Instant</h2>
+            <h2 class="brand_color-3">Elastic</h2>
           </div>
         </slyd>
 
         <slyd id="addicted-to-speed">
           <div v-list>
-            <h2>We Are</h2>
-            <h2>Addicted To</h2>
-            <h1>Speed</h1>
+            <h2>We are addicted to</h2>
+            <h1 uppercase bold>speed</h1>
+          </div>
+        </slyd>
+
+        <slyd id="moar-speed">
+          <div v-list>
+            <h1 uppercase bold>speed</h1>
+            <h1 uppercase bold>speed</h1>
+            <h2 uppercase bold>MOAR speed!</h2>
           </div>
         </slyd>
 
         <slyd id="advocate-calm-apps">
-          <div v-list text-left>
-            <small>I'd like to advocate for</small>
-            <h1>Calm apps</h1>
+          <div v-list>
+            <small class="brand_color-1">I'd like to advocate for</small>
+            <h1>Calm Apps</h1>
           </div>
         </slyd>
 
-        <slyd id="calm-apps-gif">
+        <slyd id="calm-apps-gif" two-up-video-right>
           <div v-list>
-            <picture cover>
-              <img loading="lazy" src="https://media2.giphy.com/media/l0HlQXlQ3nHyLMvte/giphy.gif?cid=790b76115d1ad277436851795945673b&rid=giphy.gif" alt="">
-            </picture>
+            <h3 class="text_color-1">Subtle</h3>
+            <p lead>difference of ~500ms</p>
           </div>
+          <video fit-height src="./videos/do-easing.mp4" loading="lazy" autoplay muted loop controls></video>
         </slyd>
 
         <slyd id="calm-app-descriptors">
           <div v-list>
-            <h2>Plush</h2>
-            <h2>Fluid</h2>
-            <h2>Soft</h2>
+            <h2 class="brand_color-1">Plush</h2>
+            <h2 class="brand_color-2">Fluid</h2>
+            <h2 class="brand_color-3">Soft</h2>
           </div>
         </slyd>
 
         <slyd id="mobile-os-comparison">
           <div v-list text-left>
-            <h2>iOS <b>vs</b> Android</h2>
-            <h3>calm <b>vs</b> fast</h3>
+            <h2 style="color:white;">iOS <b class="brand_color-3">vs</b> <span style="color:#a4c639;">Android</span></h2>
+            <h3 class="text_color-1">calm <b>vs</b> fast</h3>
           </div>
         </slyd>
 
         <slyd id="attribute-comparison">
           <div h-list>
-            <div v-list>
-              <h2>Fast</h2>
-              <div v-list>
-                <h3>Snappy</h3>
-                <h3>Instant</h3>
-                <h3>Elastic</h3>
-              </div>
-              <div v-list>
-                <h3>Startling</h3>
-                <h3>Direct</h3>
-                <h3>Fast</h3>
-              </div>
+            <div v-list top style="margin-right: 10vmax;">
+              <!-- <h3 uppercase bold class="brand_color-1">Fast</h3> -->
+              <ul v-list top style="margin:0;">
+                <li>Snappy</li>
+                <li>Instant</li>
+                <li>Elastic</li>
+              </ul>
+              <svg down-arrow class="icon" viewBox="0 0 24 24">
+                <path d="M20.016 12l-8.016 8.016-8.016-8.016 1.453-1.406 5.578 5.578v-12.188h1.969v12.188l5.625-5.578z"></path>
+              </svg>
+              <ul v-list top style="margin:0;">
+                <li>Startling</li>
+                <li>Direct</li>
+                <li>Lean</li>
+              </ul>
             </div>
-            <div v-list>
-              <h2>Calm</h2>
-              <div v-list>
-                <h3>Plush</h3>
-                <h3>Fluid</h3>
-                <h3>Soft</h3>
-              </div>
-              <div v-list>
-                <h3>Gentle</h3>
-                <h3>Orchestrated</h3>
-                <h3>Optional</h3>
-              </div>
+            <div v-list top>
+              <!-- <h3 uppercase bold class="brand_color-1">Calm</h3> -->
+              <ul v-list top style="margin:0;">
+                <li>Plush</li>
+                <li>Fluid</li>
+                <li>Soft</li>
+              </ul>
+              <svg down-arrow class="icon" viewBox="0 0 24 24">
+                <path d="M20.016 12l-8.016 8.016-8.016-8.016 1.453-1.406 5.578 5.578v-12.188h1.969v12.188l5.625-5.578z"></path>
+              </svg>
+              <ul v-list top style="margin:0;">
+                <li>Gentle</li>
+                <li>Orchestrated</li>
+                <li>Optional</li>
+              </ul>
             </div>
           </div>
         </slyd>
 
         <slyd id="app-ethos-recap">
           <div v-list>
-            <h1>Now what?</h1>
+            <h1>Now what<span class="brand_color-1">?</span></h1>
           </div>
         </slyd>
 
         <slyd id="project-physical-to-digital">
           <div v-list style="padding-left:20vw;padding-right:20vw;">
-            <h2>We <b>project</b> our physical world <b>into our digital world</b></h2>
-            <br>
-            <h2>Lower anxiety with <b>softness</b>, <b>lightness</b> & <b>orchestration</b></h2>
+            <h2 class="text_color-1">We <b>project</b> our physical world <b>into our digital world</b></h2>
+            <hr>
+            <h2 class="brand_color-1">Lower anxiety with <b>softness</b>, <b>lightness</b> & <b>orchestration</b></h2>
           </div>
         </slyd>
 
